Modified paths to lower-case

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <title>Typister by Ali Shah Jindani</title>
 
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="icon" href="Images/logo2.png">
+    <link rel="icon" href="images/logo2.png">
 
     <!-- Google SEO -->
     <meta name="description" content="Typister is a web app designed to test your typing speed on the keyboard. You can start typing as soon as you visit and work on getting faster, with a simple and clean interface.">
@@ -91,10 +91,10 @@
 
     </dialog>
 
-    <script src="JS/words.js"></script>
-    <script src="JS/timer.js"></script>
-    <script src="JS/functions.js"></script>
-    <script src="JS/main.js"></script>
+    <script src="js/words.js"></script>
+    <script src="js/timer.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
