Added Google site verification

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Google SEO -->
     <meta name="description" content="Typister is a web app designed to test your typing speed on the keyboard. You can start typing as soon as you visit and work on getting faster, with a simple and clean interface.">
     <meta name="google-site-verification" content="UJvqurcb6_a2eHN3OqiTuFaDozedqiCGpwj7ASinREA" />
+    <meta name="google-site-verification" content="rpWHw8clCpBNI5_I4MxAzplI9jRaQvE9zHZPAKUVIKA" />
 
 <body>
 
