General styling update
Removed unnecessary icon files and mostly worked on the header section. The changes include linking a new icon for webpage, the overall look of buttons, addition of logo and title in header section, media query resolution, 100 pre-loaded words instead of 50, and other small updates.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="icon" href="images/logo2.png">
+    <link rel="icon" href="images/logo.png">
 
     <!-- Google SEO -->
     <meta name="description" content="Typister is a web app designed to test your typing speed on the keyboard. You can start typing as soon as you visit and work on getting faster, with a simple and clean interface.">
@@ -23,9 +23,15 @@
 
     <header>
 
-        <!-- <img src="Images/logo2.png"> -->
+        <div id="logo">
 
-        <div id="timer"></div>
+            <button title="Logo">
+                <i class="fas fa-keyboard"></i>
+            </button>
+
+        </div>
+
+        <div id="title">Typister</div>
 
         <div id="buttons">
 
@@ -42,6 +48,8 @@
             </button>
 
         </div>
+
+        <div id="timer"></div>
 
     </header>
 
